[package]
name = "pebble"
version = "0.1.0"
edition = "2021"
description = "A small static site generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.16", features = ["cargo"] }
serde = { version = "1.0.137", features = ["derive"] }
pulldown-cmark = "0.9.1"
toml = "0.5.9"
